# dental-management-system

./: .gitignore  README.md  index.html  package-lock.json  package.json  tauri-info.txt  vite.config.ts
docs/: ARCHITECTURE.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_add_clinic_logo.sql  0002_create_patient_table.sql  0003_create_patient_table.sql  0003_separate_backup_settings.sql  0004_indexes_audit_integrity.sql  001_init.sql  002_add_initials.sql
src-tauri/src/: config.rs  crypto.rs  db.rs  lib.rs  models.rs  utils.rs
src-tauri/src/services/: audit.rs  backup.rs  dashboard.rs  errors.rs  gdrive.rs  invoice.rs  mod.rs  new_patient.rs  patient.rs  payment.rs  procedure.rs  report.rs  search.rs  settings.rs  treatment.rs  visit.rs  xray.rs
src/components/billing/: BillingHeader.tsx  BillingTable.tsx  PaymentModal.tsx
src/components/charts/: SparklineChart.tsx
src/components/common/: ErrorBoundary.tsx  StateViews.tsx  badgeStatusConfig.ts  getCurrencySymbol.ts
src/components/dashboard/: ChartCard.tsx  RecentPatientsTable.tsx  StatCard.tsx
src/components/dental-chart/: DentalArch.tsx  DentalChart.tsx  Tooth.tsx  ToothSvg.tsx  types.ts
src/components/layouts/: MainLayout.tsx  TitleBar.tsx
src/components/patients/: AllergiesMedicalAlertsCard.tsx  PatientAvatarWithStatus.tsx  PatientTable.tsx  PatientsHeader.tsx  PersonalDetailsCard.tsx  StatisticsCard.tsx  TreatmentHistoryDownloadModal.tsx  (+3 more)
src/hooks/: useBackup.ts  useBreadcrumbs.ts  useDashboard.ts  useDebounce.ts  useInvoices.ts  useKeyboardShortcut.ts  usePatients.ts  useReports.ts  useUpdater.ts  useVisits.ts
src/i18n/: index.ts
src/lib/: api.ts  export.ts  toast-utils.ts  toast.ts
src/types/: ApiTypes.ts  BillingTypes.ts  PaginationTypes.ts  PatientFormTypes.ts  PatientTypes.ts  SearchTypes.ts  UIComponentTypes.ts
src/validation/: newVisitValidation.ts  patientValidation.ts
(+51 files in other folders)
