[package]
name = "khwaja-dental-clinic"
version = "0.1.0"
description = "Dental Clinic Management System"
authors = ["Khwaja Clinic"]
edition = "2021"
license = "MIT"
repository = ""

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "derive"], default-features = false }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2"
dotenvy = "0.15"

[package.metadata.windows]
company-name = "Khwaja Clinic"
product-name = "Khwaja Dental & Implants Clinic"
copyright = "Copyright (C) 2026 Khwaja Clinic"
